--- a/acronyms.tex
+++ b/acronyms.tex
@@ -5,7 +5,7 @@
 \newacronym{NIF}{NIF}{National Ignition Facility}
 \newacronym{NIF-ARC}{NIF-ARC}{National Ignition Facility - Advanced Radiographic Capability}
 \newacronym{OMEGA-EP}{OMEGA-EP}{OMEGA Extended Performance System}
-\newacronym{RF}{RF}{Radio Frequency}
+\newacronym{RF}{RF}{radio frequency}
 \newacronym{QCD}{QCD}{quantum chromodynamics}
 \newacronym{QED}{QED}{quantum electrodynamics}
 \newacronym{WKB}{WKB}{Wentzel-Kramers-Brillouin}
@@ -13,9 +13,9 @@
 \newacronym{SOBP}{SOBP}{spread-out Bragg peak}
 \newacronym{OSUCCC}{OSUCCC}{The Ohio State Comprehensive Cancer Center}
 \newacronym{LLE}{LLE}{Laboratory for Laser Energetics}
-\newacronym{TNSA}{TNSA}{Target Normal Sheath Acceleration}
+\newacronym{TNSA}{TNSA}{target normal sheath acceleration}
 \newacronym{IBA}{IBA}{Ion Beam Analysis}
-\newacronym{IMPT}{IMPT}{Intensity Modulated Proton Therapy}
+\newacronym{IMPT}{IMPT}{intensity modulated proton therapy}
 \newacronym{ALLS}{ALLS}{Advanced Laser Light Source}
 \newacronym{XPIF}{XPIF}{x-ray and particle-induced fluorescence}
 \newacronym{EDX}{EDX}{energy dispersive x-ray fluorescence}
@@ -26,3 +26,11 @@
 \newacronym{PIC}{PIC}{particle-in-cell}
 \newacronym{NGP}{NGP}{nearest grid point}
 \newacronym{CCD}{CCD}{charge coupled device}
+\newacronym{RPA}{RPA}{radiation pressure acceleration}
+\newacronym{LSP}{LSP}{Large Scale Plasma: An implicit particle-in-cell code}
+\newacronym{NN}{NN}{neural network model}
+\newacronym{SVGP}{SVGP}{stochastic variational gaussian process}
+\newacronym{GPR}{GPR}{gaussian process regression}
+\newacronym{POLY}{POLY}{polynomial regression}
+\newacronym{ML}{ML}{machine learning}
+\newacronym{AI}{AI}{artificial intelligence}
