--- a/app1.tex
+++ b/app1.tex
@@ -1,7 +1,7 @@
 \chapter{Energy Conservation in EPOCH Particle-in-Cell Simulations Due to Finite Numbers of Particles}
 This appendix focuses on unpublished work that was done jointly with Ricky Oropeza and Joseph Smith. My contributions to this project were primarily done as a pre-candidacy student.
 
-Particle-in-Cell (PIC) simulations provide a useful but imperfect model of various plasma phenomena. In this work, the impact of the finite number of particles in a PIC simulation on the energy conservation is considered and explored through ultra-intense laser interactions with a thin, near solid density target in the Target Normal Sheath Acceleration (TNSA) regime. 
+\gls{PIC} simulations provide a useful but imperfect model of various plasma phenomena. In this work, the impact of the finite number of particles in a PIC simulation on the energy conservation is considered and explored through ultra-intense laser interactions with a thin, near solid density target in the \gls{TNSA} regime. 
 
 \section{Background}
 
