--- a/chap1.tex
+++ b/chap1.tex
@@ -124,13 +124,13 @@ While protons can generate images through radiography, they can also more genera
 \begin{figure}
 	\centering
 	\includegraphics[width=0.6\linewidth]{planning/images/mass_concentration.jpg}
-	\caption{Mass concentrations of three metal alloys are shown using two different techniques: energy dispersive x-ray (EDX) fluorescence and x-ray and particle-induced fluorescence (XPIF). Taken from Figure 4 of Boivin et al. \cite{Boivin_2022_NJoP}.}
+	\caption{Mass concentrations of three metal alloys are shown using two different techniques: \gls{EDX} and \gls{XPIF}. Taken from Figure 4 of Boivin et al. \cite{Boivin_2022_NJoP}.}
 	\label{fig:mass_concentration}
 \end{figure}
 
-As a proof of principle, Boivin \cite{Boivin_2022_NJoP} used TNSA beams from the ALLS laser facility in Canada to perform x-ray and particle-induced fluorescence (XPIF) to determine the elemental mass concentrations of three different metal alloys: stainless steel, bronze, and  brass. This is compared to a method called energy dispersive x-ray (EDX) fluorescence used in conjunction a conventional mono-energetic electron beam and shown in \autoref{fig:mass_concentration}. Although XPIF has larger error bars than EDX, both methods find good agreement with each other.
+As a proof of principle, Boivin \cite{Boivin_2022_NJoP} used TNSA beams from the \gls{ALLS} laser facility in Canada to perform \gls{XPIF} to determine the elemental mass concentrations of three different metal alloys: stainless steel, bronze, and  brass. This is compared to a method called \gls{EDX} used in conjunction a conventional mono-energetic electron beam and shown in \autoref{fig:mass_concentration}. Although XPIF has larger error bars than \gls{EDX}, both methods find good agreement with each other.
 
-As a final point, TNSA beams can be accompanied by other radiation sources like electrons, x-rays, and neutrons. Different materials characterization process could, in principle, be used in conjunction with each other. While TNSA beams are not the most common way to characterize materials today, they may emerge as an important tool for their ability to be pulsed at a high repetition rate and generated from a relatively compact system.
+As a final point, \gls{TNSA} beams can be accompanied by other radiation sources like electrons, x-rays, and neutrons. Different materials characterization process could, in principle, be used in conjunction with each other. While \gls{TNSA} beams are not the most common way to characterize materials today, they may emerge as an important tool for their ability to be pulsed at a high repetition rate and generated from a relatively compact system.
 
 \section{This Work}
 Talk about prior work 
