--- a/chap2.tex
+++ b/chap2.tex
@@ -38,7 +38,7 @@ In this section, the quasineutrality and collective behavior of plasmas will be 
 \subsection{Gaussian Laser}
 In order to heat up a material with a laser efficiently, the energy would ideally be concentrated to a small point. For example, the typical incandescent household light bulb radiates energy equally in all directions and does not do a good job of focusing energy to a point. But, using a magnifying glass can effectively concentrate the energy. For this reason, focusing optics play an important part in the field of plasma physics. 
 
-However, to obtain a focused light source, we can use lasers that have the capability of producing narrow beams. The intended output of many lasers have an electric field described by the fundantal transverse electromagnetic mode \cite{Zangwill_2012} (TEM$_{00}$) described by the following electric field
+However, to obtain a focused light source, we can use lasers that have the capability of producing narrow beams. The intended output of many lasers have an electric field described by the fundamental transverse electromagnetic mode \cite{Zangwill_2012} (TEM$_{00}$) described by the following electric field
 
 \begin{equation}
 	E(r, x) = E_0 \hat{y} \frac{w_0}{w(x)} \exp( - \frac{r^2}{w(x)^2}) \cos(k x - \arctan(x/x_R) + \frac{k r^2}{2 R(x)}) \label{eq:gaussian_beam}
@@ -290,7 +290,7 @@ In \cref{fig:electron_scaling}, we can see that the \emph{Wilks scaling} (pink) 
 	\label{fig:electron_scaling}
 \end{figure}
 
-Since protons are 1836 times as massive as electrons, they are much harder to accelerate and on the scale of femtosecond pulse interactions, they are essentially immobile. (CITATION) Despite this, ultra-intense laser experiments have demonstrated proton acceleration is possible. This section will explain the Target Normal Sheath Acceleration (TNSA) mechanism for accelerating protons and light ions which is heavily dependent on $T_h$. Then, we will discuss alternative acceleration mechanisms. Finally, we'll overview some important applications.
+Since protons are 1836 times as massive as electrons, they are much harder to accelerate and on the scale of femtosecond pulse interactions, they are essentially immobile. (CITATION) Despite this, ultra-intense laser experiments have demonstrated proton acceleration is possible. This section will explain the \gls{TNSA} mechanism for accelerating protons and light ions which is heavily dependent on $T_h$. Then, we will discuss alternative acceleration mechanisms. Finally, we'll overview some important applications.
 
 \subsection{Target Normal Sheath Acceleration}
 The observation of energetic protons off the rear side of thin plastic and gold targets has been documented throughout a variety of experiments since the 80s \cite{Tan_1984_PoF}. It might sound unintuitive that we would even see protons in the first place; after all, when shooting a target like aluminum, one would expect aluminum ions. It turns out that there is always an important and measurable surface contamination layer, primarily composed of hydrogen and light hydrocarbons \cite{Gitomer_1986_PoF}. Allen \cite{Allen_2004_PRL} showed that when removing the surface contaminant from the backside, we see a strong suppression in ion acceleration. This points to the contaminant layer being the crux of what is accelerated.
@@ -299,9 +299,9 @@ The observation of energetic protons off the rear side of thin plastic and gold 
 
 Expansion models have been long known since the 70s and 80s (e.g. Crowe \cite{Crow_1975_JPP} and Kishimoto \cite{Kishimoto_1983_PoF}) that describe the acceleration of protons with experiments (e.g. Tan \cite{Tan_1984_PoF}) as well. However, the advent of Chirped Pulse Amplification \cite{Strickland_1985_Optics} in 1985 by Donna Strickland and Gerard Mourou allowed the intensities of the laser light to increase to relativistic levels ($a_0 > 1$) with sub-ps pulse durations. This technology dramatically impacted the field of laser-plasma interactions because it allowed new relativistic regimes of ion acceleration to be explored -- for this work they won the Nobel Prize \cite{Nobel_2018}. 
 
-The field of ultra-intense proton acceleration kicked off in the year of 2000 with a group at Michigan \cite{Maksimchuk_2000_PRL} finding 1.6 MeV protons from a thin aluminum foil with a $\SI{3e18}{\watt \per \centi \meter \squared}$ class laser at normal incidence. Then, Rutherford Appleton Laboratory found 30 MeV protons \cite{Clark_2000_PRL} from a $\SI{5e19}{\watt \per \centi \meter \squared}$ class laser incident on a lead target at $45^\circ$ incidence. Shortly after, LLNL found energies up to 58MeV \cite{Snavely_2000_PRL} from a $\SI{3e20}{\watt \per \centi \meter \squared}$ class laser on a gold target at $45^\circ$ incidence.
+The field of ultra-intense proton acceleration kicked off in the year of 2000 with a group at Michigan \cite{Maksimchuk_2000_PRL} finding 1.6 MeV protons from a thin aluminum foil with a $\SI{3e18}{\watt \per \centi \meter \squared}$ class laser at normal incidence. Then, Rutherford Appleton Laboratory found 30 MeV protons \cite{Clark_2000_PRL} from a $\SI{5e19}{\watt \per \centi \meter \squared}$ class laser incident on a lead target at $45^\circ$ incidence. Shortly after, \gls{LLNL} found energies up to 58MeV \cite{Snavely_2000_PRL} from a $\SI{3e20}{\watt \per \centi \meter \squared}$ class laser on a gold target at $45^\circ$ incidence.
 
-Now that efficient MeV proton acceleration had been achieved through multiple studies, a more thorough comprehensive picture of the physical process was desired. In 2001, Wilks \cite{Wilks_2001_PoP} summarized much of the existing literature including the isothermal expansion model \cite{Crow_1975_JPP}, existence of a maximum cutoff energy \cite{Kishimoto_1983_PoF}, and dependence on hot temperature \cite{Wilks_1992_PRL}. Then, he described the Target Normal Sheath Acceleration process in the following way \cite{Wilks_2001_PoP}
+Now that efficient MeV proton acceleration had been achieved through multiple studies, a more thorough comprehensive picture of the physical process was desired. In 2001, Wilks \cite{Wilks_2001_PoP} summarized much of the existing literature including the isothermal expansion model \cite{Crow_1975_JPP}, existence of a maximum cutoff energy \cite{Kishimoto_1983_PoF}, and dependence on hot temperature \cite{Wilks_1992_PRL}. Then, he described the \gls{TNSA} process in the following way \cite{Wilks_2001_PoP}
 
 \begin{quote}
 	... the prepulse creates large plasma in front of a solid target. Once the main pulse hits the target, a cloud of energetic electrons (1-10 MeV in effective temperature) is generated, which extends past the ions on both the front and back of the target. Since the protons on the back are in a sharp, flat density gradient, they are accelerated quickly (in the first few $\mu m$ off the target) to high energies in the forward direction ... On the front, the outermost ions are in a sphere, in a long scale length plasma (due to prepulse) and therefore are accelerated to lower energies, and are spread out into $2 \pi$ steradians.
@@ -310,11 +310,11 @@ Now that efficient MeV proton acceleration had been achieved through multiple st
 \begin{figure}
 	\centering 
 	\includegraphics[width=\linewidth]{planning/images/tnsa.PNG}
-	\caption{The Target Normal Sheath Acceleration (TNSA) process is depicted. First, an intense laser pulse irradiates the front side of a target foil of few $\mu m$ thickness. This generates hot electrons that stream through the foil and re-emerge in a cloud on the rear side. The charge separation of the hot electrons and positively charged target creates intense longitudinal fields ($\sim$ TV/m) that accelerate light ions in the mostly target normal direction. This figure was taken from Roth \cite{Roth_2016_CERN_TNSA}}
+	\caption{The \gls{TNSA} process is depicted. First, an intense laser pulse irradiates the front side of a target foil of few $\mu m$ thickness. This generates hot electrons that stream through the foil and re-emerge in a cloud on the rear side. The charge separation of the hot electrons and positively charged target creates intense longitudinal fields ($\sim$ TV/m) that accelerate light ions in the mostly target normal direction. This figure was taken from Roth \cite{Roth_2016_CERN_TNSA}}
 	\label{fig:tnsa}
 \end{figure}
 
-A visual of the TNSA process can be seen in \cref{fig:tnsa}. Although Wilks \cite{Wilks_2001_PoP} provided a physical picture of the TNSA process, existing models didn't always match up to experiments. For this reason, the ensuing decade saw much progress in the development of models to describe the spectrum of TNSA accelerated protons. Perego \cite{Perego_2011_NIaMiP} gives a good review of some of the leading models developed and tested against experiments in the 2000s and these models will be summarized below. 
+A visual of the \gls{TNSA} process can be seen in \cref{fig:tnsa}. Although Wilks \cite{Wilks_2001_PoP} provided a physical picture of the \gls{TNSA} process, existing models didn't always match up to experiments. For this reason, the ensuing decade saw much progress in the development of models to describe the spectrum of \gls{TNSA} accelerated protons. Perego \cite{Perego_2011_NIaMiP} gives a good review of some of the leading models developed and tested against experiments in the 2000s and these models will be summarized below. 
 
 First, are the isothermal expansion (fluid) models which include Mora's ``Plasma Expansion into a Vacuum'' \cite{Mora_2003_PRL} (2003) that combine \cref{eq:poisson,eq:boltzmann} with fluid \cref{eq:continuity,eq:lorentz_mora}. This model underlies the work done in \cref{ch:5}, where it is explained in more detail, and has the issue of predicting proton energies that can go up to arbitrarily high values. As a remedy, Mora introduces a finite acceleration time $\tau$ which is of the order of the pulse duration. Mora \cite{Mora_2005_PRE} addresses this in a different way (2005) by instead assuming an adiabatic model and limiting the target to be a thin foil (instead of a semi-infinite target). 
 
@@ -324,20 +324,20 @@ Furthermore, some hybrid models include elements of both fluid and quasistatic m
 
 \subsubsection{Optimization of TNSA process} \label{sec:tnsa_opt}
 
-Since the TNSA process is intimately related to the hot electron process at the front of the target and the flat density gradient at the back, many efforts have been taken to design targets that optimize ion acceleration. Patel \cite{Patel_2003_PRL} used spherically shaped targets to act as a lens that can focused the proton beam. MacKinnon \cite{Mackinnon_2002_PRL} showed lower target thickness leads to higher proton energy due to a higher mean density of hot electrons at the surface. More recent experiments have even used nanowires \cite{Vallieres_2021_Nature} and microtubes \cite{Strehlow_2022_Nature}. Many experiments generally find that there is an optimal level of pre-expansion of the target that enhances hot electron generation and ion acceleration (e.g. McKenna \cite{McKenna_2008_LaPB}).
+Since the \gls{TNSA} process is intimately related to the hot electron process at the front of the target and the flat density gradient at the back, many efforts have been taken to design targets that optimize ion acceleration. Patel \cite{Patel_2003_PRL} used spherically shaped targets to act as a lens that can focused the proton beam. MacKinnon \cite{Mackinnon_2002_PRL} showed lower target thickness leads to higher proton energy due to a higher mean density of hot electrons at the surface. More recent experiments have even used nanowires \cite{Vallieres_2021_Nature} and microtubes \cite{Strehlow_2022_Nature}. Many experiments generally find that there is an optimal level of pre-expansion of the target that enhances hot electron generation and ion acceleration (e.g. McKenna \cite{McKenna_2008_LaPB}).
 
-Another way to increase the peak proton energy of the emitted spectrum is to use two spatially aligned pulses. If one pulse has a delay with respect to the other, the first pulse could pre-expand the target to provide an optimal electron density at the front surface \cite{Ferri_2018_PoP}. If the pulses are also temporally aligned, the constructive interfere at the target front surface may prove beneficial \cite{Ferri_2019_Nat_Comm}. The second approach is called \emph{Enhanced Target Normal Sheath Acceleration} (eTNSA) and \cref{ch:4} is devoted to this phenomenon. 
+Another way to increase the peak proton energy of the emitted spectrum is to use two spatially aligned pulses. If one pulse has a delay with respect to the other, the first pulse could pre-expand the target to provide an optimal electron density at the front surface \cite{Ferri_2018_PoP}. If the pulses are also temporally aligned, the constructive interfere at the target front surface may prove beneficial \cite{Ferri_2019_Nat_Comm}. The second approach is called \gls{eTNSA} and \cref{ch:4} is devoted to this phenomenon. 
 
 See the review article by Roth \cite{Roth_2016_CERN_TNSA} for a more comprehensive list of the different approaches to enhance TNSA.
 
 \subsection{Other Acceleration Mechanisms}
-TNSA is not the only method in which protons can be accelerated. For intensities of greater than $10^{21} \text{ W cm}^{-2}$, laser-induced ion shocks can start to play a significant role \cite{Fuchs_2005_Nat}. For even higher intensities $\sim 10^{23} \text{ W cm}^{-2}$, the radiation pressure of the electromagnetic wave can efficiently transfer momentum to the ions \cite{Fuchs_2005_Nat}. See Macchi \cite{Macchi_2013_RevModPhys} for a more in depth discussion on these topics. One way to differentiate the TNSA regime from other regimes is through the following equation relating $a_0$ to various properties of the laser and target
+\gls{TNSA} is not the only method in which protons can be accelerated. For intensities of greater than $10^{21} \text{ W cm}^{-2}$, laser-induced ion shocks can start to play a significant role \cite{Fuchs_2005_Nat}. For even higher intensities $\sim 10^{23} \text{ W cm}^{-2}$, the radiation pressure of the electromagnetic wave can efficiently transfer momentum to the ions \cite{Fuchs_2005_Nat}. See Macchi \cite{Macchi_2013_RevModPhys} for a more in depth discussion on these topics. One way to differentiate the \gls{TNSA} regime from other regimes is through the following equation relating $a_0$ to various properties of the laser and target
 
 \begin{equation}
 	a_0 = n_e \lambda r_e l_0 = 224 \left(\frac{n_e}{\SI{1e29}{\per \meter \cubed}}\right) \left(\frac{l_0}{\SI{1}{\micro \meter}} \right) \label{eq:acc_regime}
 \end{equation}
 
-Lezhnin \cite{Lezhnin_2015_PoP} uses this equation to differentiate TNSA from two other mechanisms: Radiation Pressure Acceleration (RPA) and Coulomb Explosions; this can be seen in \cref{fig:regimes}. If the laser intensity is sufficiently high and density is low enough to be transparent, the laser can quickly sweep away most electrons to leave behind a strongly positive target. The repelling coulomb force will cause the protons to expand outwards in all directions.
+Lezhnin \cite{Lezhnin_2015_PoP} uses this equation to differentiate \gls{TNSA} from two other mechanisms: \gls{RPA} and Coulomb Explosions; this can be seen in \cref{fig:regimes}. If the laser intensity is sufficiently high and density is low enough to be transparent, the laser can quickly sweep away most electrons to leave behind a strongly positive target. The repelling coulomb force will cause the protons to expand outwards in all directions.
 
 When the radiation pressure $P_\text{rad} \approx 2 I_0 / c$ is significant enough to overcome the thermal expanding pressure $n_e k_B T_e$, ions can accelerate directly through the transfer of momentum. \cite{Macchi_2013_RevModPhys}. In this regime, laser absorption into hot electrons by traditional mechanisms would be detrimental. By shooting the laser at normal incidence with circular polarization, resonance absorption and $\vec{J} \times \vec{B}$ heating can be minimized as seen in \cref{sec:absorption}.
 
@@ -351,7 +351,7 @@ For thick targets, this immense pressure can impart a parabolic deformation that
 \end{figure}
 
 \subsubsection{Wakefield Acceleration}
-All the aformentioned acceleration processes only make sense for overdense targets whose electron density is greater than the critical density ($n_e > n_c$). This is because the critical density surface is the primary area where the laser deposits energy into hot electrons. If the target plasma has $n_e < n_c$, the target is said to be underdense and there is no critical density surface where the laser interacts with. Tajima and Dawson \cite{Tajima_1979_PRL} first proposed the idea of a ``Laser Electron Accelerator'' in 1979 that is capable of accelerating electrons to high energies through the non-linear ponderomotive force. If the conditions are just right, the electrons can ``surf'' a plasma wave in the wake of the pulse and pull along positive ions in a process now known as \emph{Laser Wakefield Acceleration}. A comprehensive review of the subject can be found here \cite{Esarey_2009_LPA}.
+All the aformentioned acceleration processes only make sense for overdense targets whose electron density is greater than the critical density ($n_e > n_c$). This is because the critical density surface is the primary area where the laser deposits energy into hot electrons. If the target plasma has $n_e < n_c$, the target is said to be underdense and there is no critical density surface where the laser interacts with. Tajima and Dawson \cite{Tajima_1979_PRL} first proposed the idea of a ``Laser Electron Accelerator'' in 1979 that is capable of accelerating electrons to high energies through the non-linear ponderomotive force. If the conditions are just right, the electrons can ``surf'' a plasma wave in the wake of the pulse and pull along positive ions in a process now known as \gls{LWFA}. A comprehensive review of the subject can be found here \cite{Esarey_2009_LPA}.
 
 %\subsection{Notes}
 %
