--- a/chap6.tex
+++ b/chap6.tex
@@ -1,6 +1,6 @@
 \chapter{Optimization and Control of a kHz Laser System} \label{ch:6}
 
-Experimental Layout: CCD covered with aluminum which stops low energy protons and ions of lower charge to mass ratio (need to confirm this is true)
+Experimental Layout: \gls{CCD} covered with aluminum which stops low energy protons and ions of lower charge to mass ratio (need to confirm this is true)
 
 \section{Background}
 
